--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,15 +5,14 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-<p><a href="/service-shuffle">Greet the world!</a></p>
+<p><a >Ezibob Shuffle</a></p>
 
-<form action="/service-shuffle" method="GET" id="nameForm">
+<form action="/service-shuffle" method="POST" id="nameForm">
     <div>
-        <label for="nameField">How should the app call you?</label>
-        <input name="inputValue" id="nameField">
-        <button>Greet me!</button>
+        <label for="nameField">What is your number?</label>
+        <input name="inputValue" id="nameField" value="5">
+        <button>Shuffle me!</button>
     </div>
 </form>
-<div>stam</div>
 </body>
 </html>
